--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ egui = "0.29.1"
 fuzzy-matcher = "0.3.7"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
+sqlx = "0.8.2"
