--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.38"
+dotenv = "0.15.0"
 eframe = "0.29.1"
 egui = "0.29.1"
-fuzzy-matcher = "0.3.7"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
-sqlx = "0.8.2"
+sqlx = { version ="0.8.2", features = ["sqlite"] }
